# mcp-dj

./: .env.example  .gitignore  README.md  README_DJ.md  analyze-library.sh  build-library-index.sh  claude_desktop_config.json  download_models.sh  install.sh  pyproject.toml  run-mcp-http.sh  run-mcp.sh  run-server.sh  run_mcp.sh
mcp_dj/: __init__.py  ai_integration.py  analyze_library.py  analyze_track.py  app.py  camelot.py  database.py  energy_planner.py  essentia_analyzer.py  library_index.py  mcp_server.py  models.py  phrase_detector.py  phrase_store.py  setlist_engine.py
mcp_dj/static/: index.html
scripts/: analyze_library.sh  analyze_phrases.sh  test_phrase_detection.py
setlist_creator/: __init__.py  ai_integration.py  analyze_track.py  app.py  database.py  energy.py  essentia_analyzer.py  mcp_server.py  models.py  setlist_engine.py
setlist_creator/static/: index.html
tests/: test_camelot.py  test_date_my_tag_search.py  test_energy_planner.py  test_setlist_engine.py
