[project]
name = "mcp-dj"
version = "1.0.0"
description = "AI-powered DJ Setlist Creator with harmonic mixing and energy planning"
requires-python = ">=3.12"
dependencies = [
    "pyrekordbox>=0.4.3",
    "pydantic>=2.0.0",
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "loguru>=0.7.0",
    "anthropic>=0.49.0",
    "fastmcp>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
essentia = [
    # Full TF model support (mood, genre, tags) — ~135MB
    "essentia-tensorflow>=2.1b6.dev1389",
]

[project.scripts]
analyze-track = "mcp_dj.essentia_analyzer:_cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
